@@ -36,19 +36,6 @@ class ezcDbSchemaSqliteReader extends ezcDbSchemaCommonSqlReader implements ezcD
         'datetime' => 'timestamp',
         'timestamp' => 'timestamp'
     );
-            
-            
-    /**
-     * Returns what type of schema reader this class implements.
-     *
-     * This method always returns ezcDbSchema::DATABASE
-     *
-     * @return int
-     */
-    public function getReaderType()
-    {
-        return ezcDbSchema::DATABASE;
-    }
 
     /**
      * Loops over all the tables in the database and extracts schema information.
